objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Badge_ID__c</fullName>
        <label>Badge ID</label>
        <referenceTo>Badge__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Badge_Label__c</fullName>
        <label>Badge Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomBarcode_Event_Unique__c</fullName>
        <label>CustomBarcode_Event_Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Custom_Barcode__c</fullName>
        <label>Custom Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hide_Desc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Desc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Pool__c</fullName>
        <label>Item Pool</label>
        <referenceTo>Item_Pool__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <referenceTo>Item_Type__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>BLN_Item__c</referenceTo>
        <relationshipName>Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item__c</fullName>
        <label>Order Item</label>
        <referenceTo>Order_Item__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <label>Parent ID</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSVP__c</fullName>
        <label>RSVP</label>
        <picklist>
            <picklistValues>
                <fullName>Will Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May be</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet rsvp&apos;d</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scan_Id__c</fullName>
        <label>Scan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_No__c</fullName>
        <description>This field holds either the serial number or complete item location tag number
eg. for a seat it will say zone A, Row 3, Seat 47</description>
        <label>Seat No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Display_Order__c</fullName>
        <label>Ticket Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket_Status__c</fullName>
        <label>Ticket Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tstatus_Id__c</fullName>
        <label>Tstatus_Id</label>
        <referenceTo>Tstatus__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Uniq__c</fullName>
        <description>This is combination of salesforce Event Id and Random number to generate unique scan Id.</description>
        <label>Uniq</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>badgeparentid__c</fullName>
        <label>badgeparentid</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipName>badgeparentids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>praentidworkflowfill__c</fullName>
        <label>praentidworkflowfill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tkt_profile__c</fullName>
        <label>BLN TKT profile</label>
        <referenceTo>Tkt_profile__c</referenceTo>
        <relationshipLabel>BLN Tickets</relationshipLabel>
        <relationshipName>BLN_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BLN Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ticket_Status__c</columns>
        <columns>Event__c</columns>
        <columns>Item_Pool__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Item__c</columns>
        <columns>Parent_ID__c</columns>
        <columns>Badge_Label__c</columns>
        <columns>Tag_No__c</columns>
        <columns>Order__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ticket_Status__c</field>
            <operation>equals</operation>
            <value>Booked</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Heavy Truck Expo</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TKT-{000000}</displayFormat>
        <label>Ticket Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>